tests/class_statics/declared_class_static_prototype.js
declare class A {
  static prototype: Object; // error
}
